If a HTTP server responds with gzip-encoded empty content body without defining Content-Length in the response header QHttpNetworkReplyPrivate::gunzipBodyPartiallyEnd will crash because it calls zlib inflateEnd for an uninitialized stream.
-
Peter Hartmann (closed Nokia identity) (Inactive)
-
Sami Rosendahl
- Votes:
-
0 Vote for this issue
- Watchers:
-
2 Start watching this issue
- Created:
- Updated:
- Resolved:
There are no open Gerrit changes