Fix crash in QHttpNetworkReplyPrivate::gunzipBodyPartiallyEnd

If a HTTP server responds with gzip-encoded empty content without defining
Content-Length in the response header QHttpNetworkReplyPrivate::gunzipBodyPartiallyEnd
will crash because it calls zlib inflateEnd for an uninitialized stream.

- Fixed the crash by adding a check if the stream is initialized to gunzipBodyPartiallyEnd.
- Added a regression test tst_QNetworkReply::nb279420gzipNoContentLengthEmptyContentDisconnect

PMO 279420
Task-number: QTBUG-22660

Signed-off-by: Sami Rosendahl <sami.rosendahl@reaktor.fi>

Merge-request: 1465
Reviewed-by: Peter Hartmann <peter.hartmann@nokia.com>